# BE_TeacherCan

./: .env.sample  Dockerfile  README.md  db1.sqlite3  db2.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements-simple.txt  requirements.txt
.test/: pyvenv.cfg
app/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/common/: consts.py
app/crud/: column_crud.py  row_crud.py  school_crud.py  studentList_crud.py  student_crud.py  user_crud.py
app/errors/: exceptions.py
app/routers/: auth.py  auth_router.py  column_router.py  common_schemas.py  school.py  school_router.py  student.py  studentList_router.py  student_list.py  student_router.py  user.py  user_router.py
app/routers/column/: column_crud.py  column_router.py  column_schema.py
app/routers/row/: row_crud.py
app/schemas/: auth_schemas.py  column_schema.py  school_schemas.py  studentList_schemas.py  student_schemas.py  user_schemas.py
config/: api.py  asgi.py  exceptions.py  middleware.py  renderers.py  settings.py  urls.py
nginx/: nginx.conf
teachercan/: asgi.py  settings.py  wsgi.py
teachercan/auths/: api.py  apps.py  schemas.py  tests.py
teachercan/columns/: admin.py  api.py  apps.py  models.py  schemas.py
teachercan/plans/: apps.py  models.py
teachercan/schools/: admin.py  api.py  apps.py  models.py  schemas.py
teachercan/student_lists/: admin.py  api.py  apps.py  models.py  schemas.py
teachercan/students/: admin.py  api.py  apps.py  models.py
teachercan/tools/: models.py
teachercan/users/: admin.py  api.py  apps.py  models.py  schemas.py
(+29 files in other folders)
