[tool.poetry]
name = "poetry new teachercan"
version = "0.1.0"
description = "BE_TeacherCan"
authors = ["kiwi <kwi07@hanmail.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-ninja = "^1.1.0"
pyjwt = "^2.8.0"
requests = "^2.31.0"
django-environ = "^0.11.2"
pydantic = {extras = ["email"], version = "^2.6.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
